--- a/my_kernel/.cargo/config.toml
+++ b/my_kernel/.cargo/config.toml
@@ -4,4 +4,4 @@ build-std = ["core", "compiler_builtins", "alloc"]
 
 [build]
 target = "x86_64-my_os.json"
-rustflags = ["-Crelocation-model=pic"]
+rustflags = ["-Crelocation-model=pic","-Clink-arg=-pie","-Clink-arg=--image-base=0x200000"]
