finally got the relocation working, which will fix addresses (known relocatable addresses as well as heap addresses)

--- a/my_kernel/.cargo/config.toml
+++ b/my_kernel/.cargo/config.toml
@@ -4,4 +4,6 @@ build-std = ["core", "compiler_builtins", "alloc"]
 
 [build]
 target = "x86_64-my_os.json"
-rustflags = ["-Crelocation-model=pic","-Clink-arg=-pie","-Clink-arg=--image-base=0x200000"]
+rustflags = ["-Crelocation-model=pic",
+    "-Clink-arg=-pie",
+    "-Clink-arg=--image-base=0x200000"]
