--- a/user_programs/user_lib/.cargo/config.toml
+++ b/user_programs/user_lib/.cargo/config.toml
@@ -5,5 +5,4 @@ build-std = ["core", "compiler_builtins", "alloc"]
 [build]
 target = "../x86_64-my_os.json"
 rustflags = ["-Crelocation-model=pic",
-    "-Clink-arg=-pie",
-    "-Clink-arg=--image-base=0x200000"]
+            "-Clink-arg=-pie",]
