--- a/user_programs/.cargo/config.toml
+++ b/user_programs/.cargo/config.toml
@@ -2,6 +2,6 @@
 build-std = ["core", "compiler_builtins"]
 
 [build]
-target = "../x86_64-my_os.json"
+target = "x86_64-my_os.json"
 rustflags = ["-Crelocation-model=pic",
             "-Clink-arg=-pie",]
